fixed stretching of the image banners

--- a/css/index.css
+++ b/css/index.css
@@ -17,20 +17,28 @@ body
   background: linear-gradient(to bottom,  #febf04 21%,#000000 61%, #febf04 100%); /* W3C */
 /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febf04', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
-.interior, .exterior, .industrial, .contact, .index {
+h2 {
+	margin-top:0px;
+}
+.index {
+
+	position:relative;
 	width:100%;
 	height:100%;
 }
+.interior, .exterior, .industrial, .contact {
+	position:absolute;
+	width:100%;
+	height:96%;
+}
 #imagebar
 {
+	margin: 0 auto;
 	position:relative;
-	height:20em;
-  width:100%;
-	margin:0 auto;
+  	width:100%;
 }
 #imagebar img
 {
-	position:absolute;
 	left:0;
 	-webkit-transition: opacity 1s ease-in-out;
 	-moz-transition: opacity 1s ease-in-out;
@@ -61,7 +69,6 @@ body
 	margin:auto;
 	text-align:center;
 	background:white;
-	z-index:2;
   width:100%;
 }
 #body a
